# Comchemkit

./: .gitignore  CMakeLists.txt  CMakeLists_minimal.txt  Makefile  README.MD  build_test.sh  sample_config.conf
.github/workflows/: build.yml  wf.yml
scripts/: find_constants.sh  update_version.sh
src/: main.cpp  main_minimal.cpp
src/core/: cck_command_system.cpp  cck_command_system.h  cck_config.h  cck_config_manager.cpp  cck_constants.h  cck_job_scheduler.cpp  cck_qm_program.cpp  cck_qm_program.h  cck_version.h
src/gaussian/: gaussian_command_executor.cpp  gaussian_commands.h  gaussian_extractor.cpp  gaussian_extractor.h  gaussian_high_level_energy.cpp  gaussian_high_level_energy.h  gaussian_job_checker.cpp  gaussian_program.cpp  gaussian_program.h
src/nwchem/: nwchem_program.h
src/orca/: orca_program.h
